# RGBDTutorial-CVPR2014

./: README.md
DepthColorCalibration/: README.md
DepthColorRegistration/: CMakeLists.txt  README.md
DepthColorRegistration/src/: CMakeLists.txt  Registration.cpp  Registration.h  main.cpp
MobileRGBDOdometry/: README.md  build_opencv_ios_with_contrib.diff
MobileRGBDOdometry/MobileOpenCVOdometry/: AppDelegate.h  AppDelegate.m  MobileOpenCVOdometry-Info.plist  ViewController.h  ViewController.mm  ViewController_iPad.xib  ViewController_iPhone.xib
MobileRGBDOdometry/MobileOpenCVOdometry.xcodeproj/: project.pbxproj
MobileRGBDOdometry/Structure.framework/Versions/A/Headers/: Structure.h  StructureSLAM.h
